update-manager (1:0.121) UNRELEASEDkarmic; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - remove obsolete kubuntu-kde4-desktop meta package
  * DistUpgrade/DistUpgradeCache.py:
    - when guessing missing meta-packages stop after
      the first one was found
  * DistUpgrade/DistUpgradeQuirks.py:
    - move the kubuntu-kde4-desktop key dependency transition
      detection to the from_hardy quirks handler (LP: #368459)
  * UpdateManager/Core/MyCache.py:
    - always disable version number range of the changes in the
      details (LP: #251349)
    - make the distro supporting the changelogs easier to customize
  * DistUpgrade/xorg_fix_proprietary.py:
    - better comment when explaining why stuff got commented out
      (LP: #300504)
  * DistUpgrade/DistUpgradeController.py:
    - after updating the sources.list, check for both existance
      and downloadability of the BaseMetaPkgs and abort if that
      is not the case (thanks to Ulrich Kalkkuhl)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Apr 2009 09:22:42 +0200

update-manager (1:0.120) karmic; urgency=low

  * The 'Ready for karmic' version
  * DistUpgrade/DistUpgradeController.py:
    - do not fail in partial upgrades if apport must be
      enabled (LP: #357755)
    - when rewriting sources.list, check for cdrom entries
      that do not have associated list files and disable
      them (LP: #366459)
    - when rewriting sources.list, deal better with apt-cacher
      apt-torrent style uris (LP: #365537)
  * DistUpgrade/xorg_fix_proprietary.py:
    - instead of replacing fglrx->ati and nvidia->nv just
      comment out the driver and let xorg figure it out
      with its own magic (LP: #351394)
    - update tests/ for the change
  * UpdateManager/UpdateManager.py:
    - use a gtk link button to point the user to further
      upgrade information
  * DistUpgrade/DistUpgradeController.py:
    - ensure ./imported/invoke-rc.d is executable (LP: #147742)